--- a/naqlah.client/src/assets/i18n/ar.json
+++ b/naqlah.client/src/assets/i18n/ar.json
@@ -3,9 +3,15 @@
     "SIDEBAR": {
       "HOME": "الصفحة الرئيسية",
       "USERS": "المستخدمين",
+      "USERSPAGE":{
+        "SYSTEMUSERS":"مستخدم النظام",
+        "CAPTAIN":"الكابتن",
+        "SERVICEREQUEST":"طلب خدمة"
+      },
       "HR": "موظفين HR",
       "DATA_REVIEW": "مراجعه البيانات",
       "REQUESTS": "الطلبات",
+      "CAPTAINREQUESTS":"التحكم فى طلبيات الكابتن",
       "MESSAGES": "الرسائل",
       "TECH_SUPPORT": "الدعم الفني",
       "NOTIFICATIONS": "الاشعارات",
@@ -18,6 +24,15 @@
     },
     "HEADER": {
 
+    },
+    "WALLET": {
+      "CAPTAIN": {
+        "PAYMENTCARD": {
+          "BALANCE":"الرصيد",
+          "VALIDTHRUE":"صالحة حتى",
+          "CARDHOLDER":"اسم حامل البطاقة"
+        }
+      }
     }
   }
 }
