--- a/naqlah.client/src/assets/i18n/en.json
+++ b/naqlah.client/src/assets/i18n/en.json
@@ -3,9 +3,15 @@
     "SIDEBAR": {
       "HOME": "Home Page",
       "USERS": "Users",
+      "USERSPAGE":{
+        "SYSTEMUSERS":"System User",
+        "CAPTAIN":"Captain",
+        "SERVICEREQUEST":"Service Request"
+      },
       "HR": "HR Staff",
       "DATA_REVIEW": "Data Review",
       "REQUESTS": "Requests",
+      "CAPTAINREQUESTS":"Control Captain Requests",
       "MESSAGES": "Messages",
       "TECH_SUPPORT": "Technical Support",
       "NOTIFICATIONS": "Notifications",
@@ -18,6 +24,15 @@
     },
     "HEADER": {
 
+    },
+    "WALLET": {
+      "CAPTAIN": {
+        "PAYMENTCARD": {
+          "BALANCE":"BALANCE",
+          "VALIDTHRUE":"VALIDTHRUE",
+          "CARDHOLDER":"CARD HOLDER"
+        }
+      }
     }
   }
 }
