--- a/naqlah.client/src/assets/i18n/ar.json
+++ b/naqlah.client/src/assets/i18n/ar.json
@@ -20,7 +20,11 @@
       "INVOICES": "الفواتير",
       "WALLET": "المحفظة",
       "LEGAL": "الشؤون القانونية",
-      "LOGOUT": "الخروج"
+      "LOGOUT": "الخروج",
+      "CHAT":{
+        "SERVIEREQUEST":"طلب خدمة",
+        "REVIEW":"مراجعة الرسائل"
+      }
     },
     "HEADER": {
 
