--- a/naqlah.client/src/assets/i18n/en.json
+++ b/naqlah.client/src/assets/i18n/en.json
@@ -73,6 +73,128 @@
       }
     },
     "PAGES": {
+      "ORDERS": {
+        "TITLE": "Orders Management",
+        "TABS": {
+          "ALL": "All Orders",
+          "PENDING": "Pending",
+          "CONFIRMED": "Confirmed",
+          "IN_PROGRESS": "In Progress",
+          "COMPLETED": "Completed",
+          "CANCELLED": "Cancelled"
+        },
+        "SEARCH_PLACEHOLDER": "Search orders...",
+        "LOADING": "Loading orders...",
+        "NO_ORDERS": "No Orders Found",
+        "NO_ORDERS_DESC": "No orders found in this section",
+        "CARD": {
+          "FROM": "From",
+          "TO": "To",
+          "CUSTOMER": "Customer",
+          "CAPTAIN": "Captain",
+          "ORDER_NUMBER": "Order #",
+          "VIEW_DETAILS": "View Details",
+          "CHAT": "Chat",
+          "CALL": "Call"
+        },
+        "DETAILS": {
+          "TITLE": "Order Details",
+          "BACK": "Back to Orders",
+          "CANCEL_ORDER": "Cancel Order",
+          "ORDER_OVERVIEW": "Order Overview",
+          "ORDER_NUMBER": "Order Number",
+          "STATUS": "Status",
+          "CREATED_DATE": "Created Date",
+          "ESTIMATED_DELIVERY": "Estimated Delivery",
+          "ROUTE_INFO": "Route Information",
+          "FROM_LOCATION": "From Location",
+          "TO_LOCATION": "To Location",
+          "PICKUP_LOCATION": "Pickup Location",
+          "DELIVERY_LOCATION": "Delivery Location",
+          "DELIVERY_TIME": "Delivery Time",
+          "KM": "km",
+          "CUSTOMER_NAME": "Customer Name",
+          "CUSTOMER_PHONE": "Customer Phone",
+          "CUSTOMER_TYPE": {
+            "LABEL": "Customer Type",
+            "INDIVIDUAL": "Individual",
+            "INSTITUTION": "Institution"
+          },
+          "ORDER_TOTAL": "Order Total",
+          "CURRENCY": "SAR",
+          "DISTANCE": "Distance",
+          "ESTIMATED_TIME": "Estimated Time",
+          "CUSTOMER_INFO": "Customer Information",
+          "NAME": "Name",
+          "PHONE": "Phone",
+          "EMAIL": "Email",
+          "CAPTAIN_INFO": "Captain Information",
+          "CAPTAIN_NAME": "Captain Name",
+          "CAPTAIN_PHONE": "Captain Phone",
+          "VEHICLE_INFO": "Vehicle Information",
+          "LIVE_TRACKING": "Live Tracking",
+          "PHOTO_DOCUMENTATION": "Photo Documentation",
+          "ORDER_TIMELINE": "Order Timeline",
+          "TIMELINE": {
+            "ORDER_CREATED": "Order Created",
+            "ORDER_CREATED_DESC": "Your order has been successfully placed and is being processed",
+            "CAPTAIN_ASSIGNED": "Captain Assigned",
+            "CAPTAIN_ASSIGNED_DESC": "A captain has been assigned to your order",
+            "EN_ROUTE_PICKUP": "En Route to Pickup",
+            "EN_ROUTE_PICKUP_DESC": "Captain is heading to the pickup location",
+            "PICKUP_COMPLETED": "Pickup Completed", 
+            "PICKUP_COMPLETED_DESC": "Items have been picked up successfully",
+            "DELIVERY_COMPLETED": "Delivery Completed",
+            "DELIVERY_COMPLETED_DESC": "Order has been delivered successfully"
+          },
+          "BEFORE_LOADING_PHOTO": "Before Loading Photo",
+          "AFTER_DELIVERY_PHOTO": "After Delivery Photo",
+          "NOT_UPLOADED_YET": "Not uploaded yet",
+          "UPLOADED": "Uploaded",
+          "CAPTAIN_STATUS": "Captain Status",
+          "LAST_UPDATED": "Last Updated",
+          "VEHICLE_TYPE": "Vehicle Type",
+          "VEHICLE_PLATE": "Vehicle Plate",
+          "MAP": {
+            "PICKUP_LOCATION": "Pickup Location",
+            "DELIVERY_LOCATION": "Delivery Location",
+            "ROUTE_INFO": "Route Information",
+            "KILOMETERS": "kilometers"
+          },
+          "ORDER_PACKAGE": {
+            "TITLE": "Package Information",
+            "DESCRIPTION": "Package Description",
+            "WEIGHT_RANGE": "Weight Range",
+            "KG": "kilograms"
+          },
+          "ORDER_ITEMS": {
+            "TITLE": "Order Categories"
+          },
+          "ORDER_SERVICES": {
+            "TITLE": "Additional Services"
+          },
+          "PAYMENT_INFO": {
+            "TITLE": "Payment Information",
+            "METHOD": "Payment Method",
+            "AMOUNT": "Amount",
+            "STATUS": "Payment Status"
+          },
+          "PAYMENT_STATUS": {
+            "PENDING": "Pending Payment",
+            "PAID": "Paid",
+            "FAILED": "Payment Failed",
+            "REFUNDED": "Refunded"
+          },
+          "CANCEL_CONFIRMATION": {
+            "TITLE": "Cancel Order",
+            "TEXT": "Are you sure you want to cancel this order? This action cannot be undone.",
+            "CONFIRM": "Yes, Cancel",
+            "CANCEL": "No, Keep Order"
+          },
+          "CANCEL_SUCCESS": "Order has been cancelled successfully",
+          "CANCEL_ERROR": "Failed to cancel order. Please try again."
+        }
+      },
       "CAPTAIN_REQUESTS": {
         "TITLE": "Captain Requests",
         "TABS": {
@@ -197,6 +319,20 @@
           "VEHICLE_ID": "Vehicle ID:",
           "ACTIVE": "Active",
           "INACTIVE": "Inactive"
+        }
+      },
+      "ORDER_DETAILS": {
+        "TIMELINE": {
+          "ORDER_CREATED": "Order Created",
+          "ORDER_CREATED_DESC": "Your order has been successfully placed and is being processed",
+          "CAPTAIN_ASSIGNED": "Captain Assigned",
+          "CAPTAIN_ASSIGNED_DESC": "A captain has been assigned to your order",
+          "EN_ROUTE_PICKUP": "En Route to Pickup",
+          "EN_ROUTE_PICKUP_DESC": "Captain is heading to the pickup location",
+          "PICKUP_COMPLETED": "Pickup Completed",
+          "PICKUP_COMPLETED_DESC": "Items have been picked up successfully",
+          "DELIVERY_COMPLETED": "Delivery Completed",
+          "DELIVERY_COMPLETED_DESC": "Order has been delivered successfully"
         }
       },
       "ADD_CAPTAIN": {
