--- a/naqlah.client/src/assets/i18n/en.json
+++ b/naqlah.client/src/assets/i18n/en.json
@@ -16,6 +16,7 @@
       "TECH_SUPPORT": "Technical Support",
       "NOTIFICATIONS": "Notifications",
       "CATEGORY_CONTROL": "Category Control",
+      "MAIN_CATEGORIES": "Main Categories",
       "COMPLAINTS": "Complaints",
       "INVOICES": "Invoices",
       "WALLET": "Wallet",
