--- a/naqlah.client/src/assets/i18n/en.json
+++ b/naqlah.client/src/assets/i18n/en.json
@@ -17,6 +17,7 @@
       "NOTIFICATIONS": "Notifications",
       "CATEGORY_CONTROL": "Category Control",
       "MAIN_CATEGORIES": "Main Categories",
+      "ASSISTANT_WORKS": "Assistant Works",
       "COMPLAINTS": "Complaints",
       "INVOICES": "Invoices",
       "WALLET": "Wallet",
@@ -63,6 +64,16 @@
       "HELP_SUPPORT": "Help & Support",
       "ABOUT_APP": "About Application",
       "LOGOUT": "Logout"
+    },
+    "DASHBOARD": {
+      "TOTAL_ORDERS": "Total Orders",
+      "TODAY_ORDERS": "Today Orders",
+      "WEEK_ORDERS": "This Week Orders",
+      "TOTAL_CUSTOMERS": "Total Customers",
+      "ALL_TIME": "All time",
+      "TODAY": "Today",
+      "THIS_WEEK": "This week",
+      "ALL_CUSTOMERS": "All customers"
     },
     "WALLET": {
       "CAPTAIN": {
@@ -348,103 +359,124 @@
         "SUBMITTING": "Submitting...",
         "REQUIRED_FIELDS_NOTE": "Fields marked with * are required",
         "HEADER_ADD_BUTTON": "Add Captain"
+      },
+      "ADD_CAPTAIN_FIELDS": {
+        "PERSONAL_INFO_TITLE": "Personal Information",
+        "PERSONAL_INFO_SUBTITLE": "Captain basic information",
+        "IDENTITY_INFO_TITLE": "Identity Information",
+        "IDENTITY_INFO_SUBTITLE": "Personal identity data",
+        "DRIVING_LICENSE_TITLE": "Driving License",
+        "DRIVING_LICENSE_SUBTITLE": "Driving license data",
+        "DRIVING_LICENSE_TYPE": "Driving License Type",
+        "DRIVING_LICENSE_EXPIRY": "Driving License Expiry Date",
+        "FULL_NAME": "Full Name",
+        "FULL_NAME_PLACEHOLDER": "Enter full name",
+        "PHONE_NUMBER": "Phone Number",
+        "IDENTITY_NUMBER": "Identity Number",
+        "DELIVERY_TYPE": "Delivery Type",
+        "ADDRESS": "Address",
+        "ADDRESS_PLACEHOLDER": "Enter full address",
+        "VEHICLE_INFO_TITLE": "Vehicle Information",
+        "VEHICLE_INFO_SUBTITLE": "Vehicle data used for deliveries",
+        "DOCUMENTS_TITLE": "Upload documents & images",
+        "DOCUMENTS_SUBTITLE": "Required documents and images",
+        "PERSONAL_IMAGE": "Personal Image",
+        "IDENTITY_IMAGES": "Identity Images",
+        "DRIVING_LICENSE_IMAGES": "Driving License Images",
+        "DRIVING_LICENSE_FRONT_LABEL": "Driving License Front",
+        "DRIVING_LICENSE_BACK_LABEL": "Driving License Back",
+        "IDENTITY_FRONT_LABEL": "Identity Front Image",
+        "IDENTITY_BACK_LABEL": "Identity Back Image",
+        "VEHICLE_IMAGES_TITLE": "Vehicle Images",
+        "VEHICLE_FRONT_LABEL": "Front vehicle image",
+        "VEHICLE_SIDE_LABEL": "Side vehicle image",
+        "VEHICLE_INSURANCE_FRONT_LABEL": "Front insurance image",
+        "VEHICLE_INSURANCE_BACK_LABEL": "Back insurance image",
+        "PLATE_NUMBER": "Plate Number",
+        "VEHICLE_LICENSE_EXPIRY": "Vehicle License Expiry Date",
+        "VEHICLE_INSURANCE_EXPIRY": "Vehicle Insurance Expiry Date",
+        "OWNER_RESIDENT": "Resident",
+        "OWNER_COMPANY": "Company",
+        "OWNER_LEASE": "Lease",
+        "IDENTITY_FRONT_ALT": "Identity front",
+        "IDENTITY_BACK_ALT": "Identity back",
+        "DRIVING_LICENSE_FRONT_ALT": "Driving license front",
+        "DRIVING_LICENSE_BACK_ALT": "Driving license back",
+        "ALL_FIELDS_REQUIRED": "All fields are required"
+      },
+      "VEHICLES": {
+        "ADD_BRAND_VEHICLE": "Add Vehicle Brand",
+        "ADD_TYPE_VEHICLE": "Add Vehicle Type",
+        "EDIT_TYPE_VEHICLE": "Edit Vehicle Type",
+        "EDIT_BRAND_VEHICLE": "Edit Vehicle Brand",
+        "ARABIC_NAME": "Arabic Name",
+        "ENGLISH_NAME": "English Name",
+        "ACTIONS": "Actions",
+        "NO_DATA": "No vehicle types added yet",
+        "NO_DATA_BRAND": "No vehicle brands added yet",
+        "ADD": "Add",
+        "EDIT": "Edit",
+        "DELETE": "Delete",
+        "CANCEL": "Cancel",
+        "SAVE": "Save"
+      },
+      "ASSISTANT_WORKS": {
+        "TITLE": "Assistant Works",
+        "SUBTITLE": "Manage assistant works, add and edit them",
+        "SEARCH_PLACEHOLDER": "Search assistant works...",
+        "ADD_BUTTON": "Add New Assistant Work",
+        "TABLE_TITLE": "Assistant Works List",
+        "ARABIC_NAME": "Arabic Name",
+        "ENGLISH_NAME": "English Name",
+        "COST": "Cost",
+        "CURRENCY": "SAR",
+        "ACTIONS": "Actions",
+        "NO_DATA": "No assistant works added yet",
+        "ARABIC_NAME_PLACEHOLDER": "Enter Arabic name",
+        "ENGLISH_NAME_PLACEHOLDER": "Enter English name",
+        "COST_PLACEHOLDER": "Enter cost",
+        "ADD_MODAL": {
+          "TITLE": "Add New Assistant Work"
+        },
+        "EDIT_MODAL": {
+          "TITLE": "Edit Assistant Work"
+        }
       }
-    ,
-    "ADD_CAPTAIN_FIELDS": {
-      "PERSONAL_INFO_TITLE": "Personal Information",
-      "PERSONAL_INFO_SUBTITLE": "Captain basic information",
-      "IDENTITY_INFO_TITLE": "Identity Information",
-      "IDENTITY_INFO_SUBTITLE": "Personal identity data",
-      "DRIVING_LICENSE_TITLE": "Driving License",
-      "DRIVING_LICENSE_SUBTITLE": "Driving license data",
-      "DRIVING_LICENSE_TYPE": "Driving License Type",
-      "DRIVING_LICENSE_EXPIRY": "Driving License Expiry Date",
-      "FULL_NAME": "Full Name",
-      "FULL_NAME_PLACEHOLDER": "Enter full name",
-      "PHONE_NUMBER": "Phone Number",
-      "IDENTITY_NUMBER": "Identity Number",
-      "DELIVERY_TYPE": "Delivery Type",
-      "ADDRESS": "Address",
-      "ADDRESS_PLACEHOLDER": "Enter full address",
-      "VEHICLE_INFO_TITLE": "Vehicle Information",
-      "VEHICLE_INFO_SUBTITLE": "Vehicle data used for deliveries",
-      "DOCUMENTS_TITLE": "Upload documents & images",
-      "DOCUMENTS_SUBTITLE": "Required documents and images",
-      "PERSONAL_IMAGE": "Personal Image",
-      "IDENTITY_IMAGES": "Identity Images",
-      "DRIVING_LICENSE_IMAGES": "Driving License Images",
-      "DRIVING_LICENSE_FRONT_LABEL": "Driving License Front",
-      "DRIVING_LICENSE_BACK_LABEL": "Driving License Back",
-      "IDENTITY_FRONT_LABEL": "Identity Front Image",
-      "IDENTITY_BACK_LABEL": "Identity Back Image",
-      "VEHICLE_IMAGES_TITLE": "Vehicle Images",
-      "VEHICLE_FRONT_LABEL": "Front vehicle image",
-      "VEHICLE_SIDE_LABEL": "Side vehicle image",
-      "VEHICLE_INSURANCE_FRONT_LABEL": "Front insurance image",
-      "VEHICLE_INSURANCE_BACK_LABEL": "Back insurance image",
-      "PLATE_NUMBER": "Plate Number",
-      "VEHICLE_LICENSE_EXPIRY": "Vehicle License Expiry Date",
-      "VEHICLE_INSURANCE_EXPIRY": "Vehicle Insurance Expiry Date",
-      "OWNER_RESIDENT": "Resident",
-      "OWNER_COMPANY": "Company",
-      "OWNER_LEASE": "Lease",
-      "IDENTITY_FRONT_ALT": "Identity front",
-      "IDENTITY_BACK_ALT": "Identity back",
-      "DRIVING_LICENSE_FRONT_ALT": "Driving license front",
-      "DRIVING_LICENSE_BACK_ALT": "Driving license back",
-      "ALL_FIELDS_REQUIRED": "All fields are required"
     },
-    "VEHICLES": {
-      "ADD_BRAND_VEHICLE": "Add Vehicle Brand",
-      "ADD_TYPE_VEHICLE": "Add Vehicle Type",
-      "EDIT_TYPE_VEHICLE": "Edit Vehicle Type",
-      "EDIT_BRAND_VEHICLE": "Edit Vehicle Brand",
-      "ARABIC_NAME": "Arabic Name",
-      "ENGLISH_NAME": "English Name",
-      "ACTIONS": "Actions",
-      "NO_DATA": "No vehicle types added yet",
-      "NO_DATA_BRAND": "No vehicle brands added yet",
-      "ADD": "Add",
-      "EDIT": "Edit",
-      "DELETE": "Delete",
-      "CANCEL": "Cancel",
-      "SAVE": "Save"
+    "PAGESHEADER": {
+      "CAPTAIN_DETAILS": {
+          "TITLE": "Captain Management",
+          "SUBTITLE": "Manage current captains and add new ones"
+      },
+      "CAPTAIN_REQUESTS": {
+          "TITLE": "Captain Requests",
+          "SUBTITLE": "Review and manage captain requests"
+      },
+      "VEHICLES": {
+        "TITLE": "Vehicle Management",
+        "SUBTITLE": "Manage vehicles and their details"
+      },
+      "DASHBOARD": {
+        "TITLE": "Admin Dashboard",
+        "SUBTITLE": "Overview of key metrics and activities"
+      },
+      "BRANDS": {
+        "TITLE": "Vehicle Brands",
+        "SUBTITLE": "Manage vehicle brands and their details"
+      },
+      "TYPES": {
+        "TITLE": "Vehicle Types",
+        "SUBTITLE": "Manage vehicle types and their details"
+      },
+      "USERS": {
+        "TITLE": "User Management",
+        "SUBTITLE": "Manage users and their roles"
+      },
+      "ADD_CAPTAIN": {
+        "TITLE": "Add Captain",
+        "SUBTITLE": "Fill the captain information and vehicle details"
+      }
     }
-  },
-  "PAGESHEADER": {
-    "CAPTAIN_DETAILS": {
-        "TITLE": "Captain Management",
-        "SUBTITLE": "Manage current captains and add new ones"
-    },
-    "CAPTAIN_REQUESTS": {
-        "TITLE": "Captain Requests",
-        "SUBTITLE": "Review and manage captain requests"
-    },
-    "VEHICLES": {
-      "TITLE": "Vehicle Management",
-      "SUBTITLE": "Manage vehicles and their details"
-    },
-    "DASHBOARD": {
-      "TITLE": "Admin Dashboard",
-      "SUBTITLE": "Overview of key metrics and activities"
-    },
-    "BRANDS": {
-      "TITLE": "Vehicle Brands",
-      "SUBTITLE": "Manage vehicle brands and their details"
-    },
-    "TYPES": {
-      "TITLE": "Vehicle Types",
-      "SUBTITLE": "Manage vehicle types and their details"
-    },
-    "USERS": {
-      "TITLE": "User Management",
-      "SUBTITLE": "Manage users and their roles"
-    },
-    "ADD_CAPTAIN": {
-      "TITLE": "Add Captain",
-      "SUBTITLE": "Fill the captain information and vehicle details"
-    }
-  }
   },
   "COMMON": {
     "CHOOSE_IMAGE": "Choose image",
