handoe areas and profile

--- a/naqlah.client/src/assets/i18n/en.json
+++ b/naqlah.client/src/assets/i18n/en.json
@@ -18,6 +18,8 @@
       "CATEGORY_CONTROL": "Category Control",
       "MAIN_CATEGORIES": "Main Categories",
       "ASSISTANT_WORKS": "Assistant Works",
+      "AREAS_SETTINGS": "Areas Settings",
+      "CUSTOMER_WALLET_TRANSACTIONS": "Customer Wallet Transactions",
       "COMPLAINTS": "Complaints",
       "INVOICES": "Invoices",
       "WALLET": "Wallet",
@@ -64,6 +66,30 @@
       "HELP_SUPPORT": "Help & Support",
       "ABOUT_APP": "About Application",
       "LOGOUT": "Logout"
+    },
+    "PROFILE": {
+      "TITLE": "Profile",
+      "SUBTITLE": "View and edit your account information",
+      "LOADING": "Loading profile...",
+      "EDIT": "Edit",
+      "CANCEL": "Cancel",
+      "SAVE": "Save",
+      "SAVING": "Saving...",
+      "USERNAME": "Username",
+      "FULL_NAME": "Full Name",
+      "EMAIL": "Email",
+      "PHONE": "Phone Number",
+      "ACCOUNT_STATUS": "Account Status",
+      "ACCOUNT_STATUS_DESC": "Your account status in the system",
+      "ACTIVE": "Active",
+      "INACTIVE": "Inactive",
+      "CHANGE_PASSWORD": "Change Password",
+      "CHANGE_PASSWORD_DESC": "Leave blank if you don't want to change your password",
+      "NEW_PASSWORD": "New Password",
+      "CONFIRM_PASSWORD": "Confirm Password",
+      "NEW_PASSWORD_PLACEHOLDER": "Enter new password",
+      "CONFIRM_PASSWORD_PLACEHOLDER": "Confirm new password",
+      "PASSWORD_MIN_LENGTH": "Password must be at least 6 characters"
     },
     "DASHBOARD": {
       "TOTAL_ORDERS": "Total Orders",
